# c-editor-shell

./: CMakeLists.txt  Makefile  README.md
include/: data_structures.h  io.h  string_utils.h  terminal.h
include/utils/: common_utils.h
src/: CMakeLists.txt  io.c  terminal.c
src/data_structures/: list.c  map.c  vector.c
src/utils/: common_utils.c  string_utils.c
tests/: CMakeLists.txt  simple_test.c  test_io.c  test_terminal.c
tests/data_structures/: CMakeLists.txt  test_list.c  test_map.c  test_vector.c
tests/utils/: CMakeLists.txt  test_common_utils.c  test_string_utils.c
